# gameplan-cli

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT_PLAN.md  README.md  pyproject.toml
.github/workflows/: test.yml
cli/: __init__.py  __main__.py  agenda.py  cli.py  init.py  sync.py
cli/adapters/: __init__.py  base.py  jira.py  misc.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_adapter_interface.py  test_agenda_command.py  test_cli.py  test_init_command.py  test_sync.py
tests/unit/adapters/: test_jira.py  test_misc.py
